# oop_exercise_03

./: CMakeLists.txt
Tests/: test_01.txt  test_02.txt
include/: Figure.hpp  Hexagon.hpp  Octagon.hpp  Triangle.hpp  main.hpp
source/: Figure.cpp  Hexagon.cpp  Octagon.cpp  Triangle.cpp  main.cpp
